--- a/mobile.css
+++ b/mobile.css
@@ -1,375 +1,374 @@
 @media screen and (max-width:768px){
-    .titoloselezione{
-        
-        font-family:'Courier New';
-        color:#fff;
-        font-size:200%;
-        font-weight:normal;
-        text-align:center;
-        text-transform:uppercase;
-        text-shadow: 1px 2px 5px rgba(65, 65, 240, 0.897);
-        margin-top: 1.5%;
-      }
+  .titoloselezione{
       
-
-      .schermata {
-        width: 100%;
-        height: 100%;
-        background: url(image/fondale.png) no-repeat center top;
-        position: fixed; 
-        z-index: -1;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-      }
-
-      .schermata_2 {
-        width: 100%;
-        height: 100%;
-        background: url(image/fondale_2.png);
-        position: fixed; 
-      }
-
-
-      .bott{
-        width: 50%;
-        margin-top:2%;
-        border-color:transparent;
-        border-radius:40px;
-        box-shadow:0px 0px 15px #4646fe;
-        
-        font-family:'Courier New';
-        background-color:#0606fb;
-        cursor:pointer;
-        color:#FFFFFF;
-      }
-
-      .comand{
-        font-size: 40%;
-      
-        width: 100%;
-        height: 25%;
-        margin-top: 75%;
-        text-align: center;
-        }
-
-        .comandi {
-          width: 100%;
-          height: 60%;
-          margin-top: 20%;
-          left: 0;
-        }
-
-        .indietro{
-          width:30%;
-          height:25%;
-          margin-top:0;
-          margin-left:0;
-          font-size: 100%;
-          color: #ffffff;
-          background-color: #0606fb;
-        }
-        .indietro1{
-          width:30%;
-          height:5%;
-          margin-top:0;
-          margin-left:0;
-          font-size: 150%;
-          color: #ffffff;
-          background-color: #0606fb;
-        }
-        .regole{
-          font-size:100%;
-          overflow:auto;
-          width:90%;
-          height:80%;
-          font-family:"Courier New";
-          color: white;
-          text-align:justify;
-          overflow-y: scroll;
-        }
-      
-        .titoloregole{
-          font-family:'Courier New';
-          color:#ffffff;
-          font-size:400%;
-          font-weight:bold;
-          text-align:center;
-          text-transform:uppercase;
-          text-shadow: 1px 2px 5px rgba(2, 2, 223, 0.897);
-          
-        
-        }
-      .titolo{
-        font-family:'Courier New';
-        color:#ffffff;
-        font-size:200%;
-        font-weight:bold;
-        text-align:center;
-        text-transform:uppercase;
-        text-shadow: 1px 2px 5px rgba(2, 2, 223, 0.897);
-        margin-top: 2%;
-      }
-      
-      #container{
-        
-        width:100%;
-        height: 180%;
-      }
-      
-      .nnavselezione{
-        
-        font-family:'Courier New';
-        font-size:100%;
-        color:#fff;
-        overflow:auto;
-        text-align:center;
-        font-weight: bold;
-        height:7%
-      }
-      
-      .naveselezione{
-        width:18.9%;
-        height: 43%;
-        background: linear-gradient(#0b4476, #074365);
-        border-top: 1px solid #000000;
-        border-bottom: 1px solid #000000;
-        border-left:1px solid #000000;
-        border-right: 1px solid #000000;
-        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
-      }
-      
-      .imgselezione{
-        width:100%;
-        height:28%;
-        margin:5% auto 0 auto;
-        text-align:center;
+      font-family:'Courier New';
+      color:#fff;
+      font-size:200%;
+      font-weight:normal;
+      text-align:center;
+      text-transform:uppercase;
+      text-shadow: 1px 2px 5px rgba(65, 65, 240, 0.897);
+      margin-top: 1.5%;
+    }
     
-      }
-      
-      .spazim{
-        width:100%;
-        height:100%;
-      }
-      
-      .infos{
-        width: 100%;
-        height: 40%;
-      }
-      
-      .descn{
-        font-size:100%;
-        height:100%;
-        overflow:auto;
-        width:100%;
-        font-family:"Courier New";
-        color: white;
-        text-align:center;
-      }
-      
-      .button{
-        
-        width:100%;
-        height:30%;
-        margin: 0;
-        -moz-transition: all 0.4s ease-in-out;
-        -o-transition: all 0.4s ease-in-out;
-        -ms-transition: all 0.4s ease-in-out;
-        transition: all 0.4s ease-in-out;
-      }
-   
-      .bott1{
-  
-        width:100%;
-        height:80%;
-        border-color:transparent;
-        border-radius:40px;
-        font-size:60%;
-        cursor:pointer;
-        text-align: center;
-        font-family:'Courier New';
-        background-color:rgb(0, 0, 0);
-        color:#FFFFFF;
-      }
 
-      .esit{
-        font-weight:bold;
-        text-align:center;
-        font-size:500%;
-        color:white;
-      }
-
-
-
-      .para{
-        border: solid 1px white;
-        margin-top: 7%;
-        margin-left: 17%;
-        text-align: center;
-        font-family:'Courier New';
-        font-size:100%;
-        width:70%;
-        color:#FFFFFF;
-      }
-
-      #countdown {
-        text-align:center;
-        font-family:'Courier New';
-        color: #ffffff;
-        font-size: 190%;
-        width: 100%;
-        margin: 0;
-      }
-      
-      
-      
-      #table1{
-        margin: 0;
-        width:100%;
-        height:80%;
-        border:1px solid black;
-        border-collapse: collapse;
-      }
-      
-      .desc{
-        font-size:80%;
-        margin-top:8%;
-        overflow:auto;
-        width:100%;
-        font-family:"Courier New";
-        color: white;
-        text-align:center;
-      }
-      
-       #abilita{
-          text-align:center;
-          margin-top:10%;
-          width:100%;
-          height:100%;
-        }
-      
-      .parametri {
-          width:27%;
-          margin-right:3%;
-          float: right;
-          border:1px solid black;
-          height:60%;
-        }
-      
-      .health {
-        margin-top: 1%;
-        position: relative;
-        width: 100%;
-        height: 30px;
-        background: #b7c0b9;
-        border-radius: 5px;
-        overflow: hidden;
-      }
-      
-      .health__fill {
-        width: 0%;
-        height: 100%;
-        background: #1eea68;
-        transition: all 0.2s;
-      }
-      
-      .health__text {
-        position: absolute;
-        top: 50%;
-        right: 5px;
-        transform: translateY(-50%);
-        font: bold 14px "Quicksand", sans-serif;
-        color: #ffffff;
-      }
-      
-      .conts{
-        border: solid 1px white;
-        text-align: center;
-        font-family:'Courier New';
-        font-size:130%;
-        width:100%;
-        color:#FFFFFF;
-      }
-
-      .titoloregole{
-        font-family:'Courier New';
-        color:#ffffff;
-        font-size:300%;
-        font-weight:bold;
-        text-align:center;
-        text-transform:uppercase;
-        text-shadow: 1px 2px 5px rgba(2, 2, 223, 0.897);
-        margin-top: 0%;
-      }
-    
-   
-
-    .casella{
-      display: block;
-      width:100%;
-      height:100%;
-      }
-      
-      #campo{
-      min-height:20%;
-      max-height:100%;
-      width:48%;
-      height: 91%;
-      margin-left: 20%;
-      }
-      .campogioco{
-        border:1px solid black;
-        table-layout: fixed;
-        width:2%;
-        height:2%;
-        font-size:80%;
-        color:rgb(38, 211, 211);
-        }
-      
+    .schermata {
+      width: 100%;
+      height: 100%;
+      background: url(image/fondale.png) no-repeat center top;
+      position: fixed; 
+      z-index: -1;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
     }
 
-    .bott2{
-      text-align: center;
-      width:60%;
-      height:25%;
-      border: 1px solid black;
-      
+    .schermata_2 {
+      width: 100%;
+      height: 80%;
+      background: url(image/fondale_2.png);
+      position: fixed; 
+    }
+
+
+    .bott{
+      width: 50%;
+      margin-top:2%;
       border-color:transparent;
       border-radius:40px;
       box-shadow:0px 0px 15px #4646fe;
-      font-size: 250%;
+      
       font-family:'Courier New';
       background-color:#0606fb;
       cursor:pointer;
       color:#FFFFFF;
     }
 
-    .schermata_f{
+    .comand{
+      font-size: 40%;
+    
+      width: 100%;
+      height: 25%;
+      margin-top: 75%;
+      text-align: center;
+      }
+
+      .comandi {
+        width: 100%;
+        height: 60%;
+        margin-top: 20%;
+        left: 0;
+      }
+
+      .indietro{
+        width:30%;
+        height:25%;
+        margin-top:0;
+        margin-left:0;
+        font-size: 100%;
+        color: #ffffff;
+        background-color: #0606fb;
+      }
+      .indietro1{
+        width:30%;
+        height:5%;
+        margin-top:0;
+        margin-left:0;
+        font-size: 150%;
+        color: #ffffff;
+        background-color: #0606fb;
+      }
+      .regole{
+        font-size:100%;
+        overflow:auto;
+        width:90%;
+        height:80%;
+        font-family:"Courier New";
+        color: white;
+        text-align:justify;
+        overflow-y: scroll;
+      }
+    
+      .titoloregole{
+        font-family:'Courier New';
+        color:#ffffff;
+        font-size:400%;
+        font-weight:bold;
+        text-align:center;
+        text-transform:uppercase;
+        text-shadow: 1px 2px 5px rgba(2, 2, 223, 0.897);
+        
+      
+      }
+    .titolo{
+      font-family:'Courier New';
+      color:#ffffff;
+      font-size:200%;
+      font-weight:bold;
+      text-align:center;
+      text-transform:uppercase;
+      text-shadow: 1px 2px 5px rgba(2, 2, 223, 0.897);
+      margin-top: 3%;
+    }
+    
+    #container{
+      
+      width:100%;
+      height: 180%;
+    }
+    
+    .nnavselezione{
+      
+      font-family:'Courier New';
+      font-size:100%;
+      color:#fff;
+      overflow:auto;
+      text-align:center;
+      font-weight: bold;
+      height:7%
+    }
+    
+    .naveselezione{
+      width:18.9%;
+      height: 43%;
+      background: linear-gradient(#0b4476, #074365);
+      border-top: 1px solid #000000;
+      border-bottom: 1px solid #000000;
+      border-left:1px solid #000000;
+      border-right: 1px solid #000000;
+      box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
+    }
+    
+    .imgselezione{
+      width:100%;
+      height:28%;
+      margin:5% auto 0 auto;
+      text-align:center;
+  
+    }
+    
+    .spazim{
       width:100%;
       height:100%;
-      margin-top:0%;
+    }
+    
+    .infos{
+      width: 100%;
+      height: 40%;
+    }
+    
+    .descn{
+      font-size:100%;
+      height:100%;
+      overflow:auto;
+      width:100%;
+      font-family:"Courier New";
+      color: white;
+      text-align:center;
+    }
+    
+    .button{
       
-      font-size: 200%;
+      width:100%;
+      height:30%;
+      margin: 0;
+      -moz-transition: all 0.4s ease-in-out;
+      -o-transition: all 0.4s ease-in-out;
+      -ms-transition: all 0.4s ease-in-out;
+      transition: all 0.4s ease-in-out;
+    }
+ 
+    .bott1{
+
+      width:100%;
+      height:80%;
+      border-color:transparent;
+      border-radius:40px;
+      font-size:60%;
+      cursor:pointer;
+      text-align: center;
       font-family:'Courier New';
+      background-color:rgb(0, 0, 0);
       color:#FFFFFF;
     }
 
-    .botmob{
-      width:20%;
-      height:60px;
-      font-size:60%;
-    }
-  
-    .tasti{
+    .esit{
+      font-weight:bold;
       text-align:center;
+      font-size:500%;
+      color:white;
+    }
+
+
+
+    .para{
+      margin-top: 20%;
+      margin-left: 17%;
+      text-align: center;
+      font-family:'Courier New';
+      font-size:80%;
+      width:70%;
+      border:hidden;
+      color:#FFFFFF;
+    }
+
+    #countdown {
+      text-align:center;
+      font-family:'Courier New';
+      color: #ffffff;
+      font-size: 140%;
+      width: 100%;
+      margin: 0;
+    }
+    
+    
+    
+    #table1{
+      margin: 0;
       width:100%;
+      height:80%;
+      border:1px solid black;
+      border-collapse: collapse;
+    }
+    
+    .desc{
+      font-size:80%;
+      margin-top:8%;
+      overflow:auto;
+      width:100%;
+      font-family:"Courier New";
+      color: white;
+      text-align:center;
+    }
+    
+     #abilita{
+        text-align:center;
+        margin-top:10%;
+        width:100%;
+        height:100%;
+      }
+    
+    .parametri {
+        width:27%;
+        margin-right:3%;
+        float: right;
+        border:hidden;
+        height:60%;
+      }
+    
+    .health {
+      margin-top: 1%;
+      position: relative;
+      width: 100%;
+      height: 30px;
+      background: #b7c0b9;
+      border-radius: 5px;
+      overflow: hidden;
+    }
+    
+    .health__fill {
+      width: 0%;
+      height: 100%;
+      background: #1eea68;
+      transition: all 0.2s;
+    }
+    
+    .health__text {
+      position: absolute;
+      top: 50%;
+      right: 5px;
+      transform: translateY(-50%);
+      font: bold 14px "Quicksand", sans-serif;
+      color: #ffffff;
+    }
+    
+    .conts{
+      border: solid 1px white;
+      text-align: center;
+      font-family:'Courier New';
+      font-size:130%;
+      width:100%;
+      color:#FFFFFF;
+    }
+
+    .titoloregole{
+      font-family:'Courier New';
+      color:#ffffff;
+      font-size:300%;
+      font-weight:bold;
+      text-align:center;
+      text-transform:uppercase;
+      text-shadow: 1px 2px 5px rgba(2, 2, 223, 0.897);
+      margin-top: 0%;
     }
   
-    .tastiarm{
-      margin-top:5%;
+ 
+
+  .casella{
+    display: block;
+    width:100%;
+    height:100%;
     }
+    
+    #campo{
+      margin: 0;
+      min-height:20%;
+      max-height:100%;
+      width:69%;
+      height: 60%;
+    }
+    .campogioco{
+      border:1px solid black;
+      table-layout: fixed;
+      width:1%;
+      height:1%;
+      font-size:80%;
+      color:rgb(38, 211, 211);
+      }
+    
+  }
+
+  .bott2{
+    width:18%;
+    height:25%;
+    margin-top:30%;
+    margin-left: 40%;
+    border-color:transparent;
+    border-radius:40px;
+    box-shadow:0px 0px 15px #4646fe;
+    font-size: 250%;
+    font-family:'Courier New';
+    background-color:#0606fb;
+    cursor:pointer;
+    color:#FFFFFF;
+  }
+
+  .schermata_f{
+    width:18%;
+    height:25%;
+    margin-top:0%;
+    margin-left: 38%;
+    font-size: 250%;
+    font-family:'Courier New';
+    color:#FFFFFF;
+  }
+
+  .botmob{
+    width:20%;
+    height:60px;
+    font-size:60%;
+  }
+
+  .tasti{
+    text-align:center;
+    width:100%;
+  }
   
-    .spazaudio{
-      margin-top:90%;
-    }
+  .tastiarm{
+    margin-top:5%;
+  }
+
+  .spazaudio{
+    margin-top:90%;
+  }
